bluec-tests/tests/valid/types_short/multi/args_client.c
int test_sum(int a, int b, int c, short d, int e, short f, int g, int h, short i);

int main(void) {
    return test_sum(1, 2, 3, 4, 5, 6, 7, 8, 9);
}