bluec-tests/tests/invalid/decl_var/multiple_declarators_2.c
int main(void) {
    int a, b, c;
    int c;
    return 0;
}